openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-helloworld
  name: sb-helloworld
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sb-helloworld
    deploymentconfig: sb-helloworld
  sessionAffinity: None
  type: ClusterIP
