openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: sb-helloworld
spec:
  host: sb-helloworld-infrastructure.127.0.0.1.nip.io
  to:
    kind: Service
    name: sb-helloworld
    weight: 100
  wildcardPolicy: None
